html and CSS edits to make portfolio responsive

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -171,6 +171,34 @@ section {
   text-align: center;
 }
 
+.passion {
+  margin: 0;
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto;
+  grid-template-areas:
+    "crossfit nature"
+    "coding    dogs";
+}
+
+.crossfit {
+  grid-area: crossfit;
+}
+
+.nature {
+  grid-area: nature;
+}
+
+.coding {
+  grid-area: coding;
+}
+.dogs {
+  grid-area: dogs;
+}
+
+.card {
+  margin: 20px;
+}
 body {
   display: flex;
   flex-direction: column;
@@ -318,5 +346,15 @@ footer {
   }
   .hidden-desktop {
     display: block;
+  }
+}
+
+@media (max-width: 700px) {
+  .passion {
+    grid-template-areas:
+      "crossfit"
+      "nature"
+      "coding"
+      "dogs";
   }
 }
