Fixed Sticky Footer on HTML and CSS

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -186,8 +186,10 @@ body {
   min-height: 100vh;
 }
 
+.content {
+  min-height: calc(100vh - 70px);
+}
 footer {
-    position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
@@ -195,6 +197,7 @@ footer {
     height: 5%;
     text-align: center;
     margin-top: auto;
+    
   }
 
 }
